<resources>
    <string name="app_name">Payments Tracker</string>
    <string name="app_logo">App logo</string>
    <string name="image">Image</string>
    <string name="value">Value</string>
    <string name="description">Description</string>
    <string name="delete_this_item">Delete This Item</string>
    <string name="all_payments">All Payments</string>
    <string name="delete_all">Delete All</string>
    <string name="add_new_payment">Add New Payment</string>
    <string name="name">Name</string>
    <string name="save">Save</string>
    <string name="cancel">Cancel</string>
    <string name="enter_the_name">Enter the name</string>
    <string name="enter_the_value">Enter the value</string>
    <string name="enter_the_description_optional">Enter the Description (optional)</string>
    <string name="home">Home</string>
    <string name="statistics">Statistics</string>
    <string name="list">List</string>
    <string name="profile">Profile</string>
    <string name="add_new">Add New</string>
    <string name="notifications">notifications</string>
    <string name="available_balance">Available Balance</string>
    <string name="balance">%.2fEGP</string>
    <string name="expense">Expense</string>
    <string name="income">Income</string>
    <string name="history">History</string>
    <string name="payment_list">Payment List</string>
    <string name="add_expense">Add Expense</string>
    <string name="invalid_name">Invalid name!</string>
    <string name="invalid_value">Invalid value!</string>
    <string name="egp">EGP</string>
    <string name="add">Add</string>
    <string name="expenses_history">Expenses History</string>
    <string name="expenses">Expenses</string>
    <string name="incomes">Incomes</string>
    <string name="made_with_love_by">Made with ❤️ by:</string>
    <string name="abdo_sharaf">Abdo Sharaf</string>
    <string name="add_income">Add Income</string>
    <string name="reset_balance">Reset Balance</string>
    <string name="edit_your_balance">Edit Your Balance</string>
    <string name="enter_new_balance_value">Enter New Balance Value</string>
    <string name="edit">Edit</string>
    <string name="export_payments">Export Payments</string>
    <string name="choose_expense_date">Choose expense date:</string>
    <string name="choose_income_date">Choose income date:</string>
    <string name="this_will_exceed_your_balance">This will exceed your current balance!</string>
    <string name="you_are_flat_broke">You are flat broke 😢</string>
    <string name="today">Today</string>
    <string name="another_day">Another day</string>
    <string name="now">Now</string>
    <string name="another_time">Another Time</string>
    <string name="choose_a_date">Choose a date</string>
    <string name="choose_a_time">Choose a time</string>
    <string name="added_successfully">Added successfully</string>
    <string name="date">Date</string>
    <string name="at">at</string>
    <string name="go_back">Go Back</string>
</resources>